force-app/main/default/objects/Case__c/fields/Asset_1__c.field-meta.xml
<CustomField>
    <fullName>Asset_1__c</fullName>
    <label>Asset 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>