force-app/main/default/objects/Case__c/fields/Asset_2__c.field-meta.xml
<CustomField>
    <fullName>Asset_2__c</fullName>
    <label>Asset 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>