force-app/main/default/objects/Case__c/fields/Asset_3__c.field-meta.xml
<CustomField>
    <fullName>Asset_3__c</fullName>
    <label>Asset 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>