force-app/main/default/objects/Case__c/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <label>Asset ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>