force-app/main/default/objects/Case__c/fields/Asset_Master__c.field-meta.xml
<CustomField>
    <fullName>Asset_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stable reference to the asset this case is about. Stamped at case creation so approvals resolve correctly even if the asset code or outlet changes afterwards.</description>
    <label>Asset Master</label>
    <referenceTo>Asset_Master__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Asset_Master_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>