force-app/main/default/objects/Case__c/fields/Asset_Quantity_2__c.field-meta.xml
<CustomField>
    <fullName>Asset_Quantity_2__c</fullName>
    <label>Asset Quantity 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>