force-app/main/default/objects/Case__c/fields/Assigned_Asset__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The outlet asset mapping chosen on a Skin Change branding request. Optional, and independent of the Branding Asset being re-skinned.</description>
    <label>Assigned Asset</label>
    <referenceTo>Asset_Mapping__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Assigned_Asset_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>