force-app/main/default/objects/Case__c/fields/Branding_Asset__c.field-meta.xml
<CustomField>
    <fullName>Branding_Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Branding Asset</label>
    <referenceTo>Branding_Asset__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>