force-app/main/default/objects/Case__c/fields/Branding_Return_Status__c.field-meta.xml
<CustomField>
    <fullName>Branding_Return_Status__c</fullName>
    <label>Branding Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Re Use</fullName>
            </value>
            <value>
                <fullName>Consumed</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Reused</fullName>
                <isActive>false</isActive>
                <label>Reused</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>