force-app/main/default/objects/Case__c/fields/Case_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Name__c</fullName>
    <formula>Case_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Type Name</label>
    <type>Text</type>
</CustomField>