force-app/main/default/objects/Case__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <label>Dimensions</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>