force-app/main/default/objects/Case__c/fields/Distributor_Transfer_From__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Transfer_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor (Transfer From)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_type_Name__c</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Distributor (Transfer From))</relationshipLabel>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>