force-app/main/default/objects/Case__c/fields/Duplicate_Warning__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Warning__c</fullName>
    <description>Populated at case creation when another Branding &amp; Marketing Asset Request was raised for the same outlet within the last 90 days. Shown on the approval page so approvers see it while approving.</description>
    <inlineHelpText>A previous branding request exists for this outlet within 90 days. Review before approving.</inlineHelpText>
    <label>Duplicate Warning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>