force-app/main/default/objects/Case__c/fields/Expected_Sale__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sale__c</fullName>
    <label>Expected Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>