force-app/main/default/objects/Case__c/fields/FMS_Status__c.field-meta.xml
<CustomField>
    <fullName>FMS_Status__c</fullName>
    <label>FMS Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>