force-app/main/default/objects/Case__c/fields/Freezer_Condition__c.field-meta.xml
<CustomField>
    <fullName>Freezer_Condition__c</fullName>
    <label>Freezer Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Refurbished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>