force-app/main/default/objects/Case__c/fields/Freezer_ID__c.field-meta.xml
<CustomField>
    <fullName>Freezer_ID__c</fullName>
    <label>Freezer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>