force-app/main/default/objects/Case__c/fields/Freezer_Model_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Freezer_Model_Vehicle_Type__c</fullName>
    <label>Freezer Model / Vehicle Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>