force-app/main/default/objects/Case__c/fields/Freezer_type__c.field-meta.xml
<CustomField>
    <fullName>Freezer_type__c</fullName>
    <label>Freezer type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>