force-app/main/default/objects/Case__c/fields/Installation_Image_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Installation_Image_URL_2__c</fullName>
    <description>Download URL of the second installation photo (Side 2). Side 1 is on Installation_Image_URL__c. Copied to the Branding Asset when the case reaches Installed.</description>
    <label>Installation Image URL Side 2</label>
    <type>Url</type>
</CustomField>