force-app/main/default/objects/Case__c/fields/Installation_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Installation_Image_URL__c</fullName>
    <description>Download URL of the photo captured when the raiser submitted the installation. Copied onto the Branding Asset records created for this case.</description>
    <label>Installation Image URL</label>
    <type>Url</type>
</CustomField>