force-app/main/default/objects/Case__c/fields/L1__c.field-meta.xml
<CustomField>
    <fullName>L1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>