force-app/main/default/objects/Case__c/fields/L1_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>L1_Approved_Date__c</fullName>
    <label>L1 Approved Date</label>
    <type>Date</type>
</CustomField>