force-app/main/default/objects/Case__c/fields/L1_Equals_L2_c__c.field-meta.xml
<CustomField>
    <fullName>L1_Equals_L2_c__c</fullName>
    <formula>L1__c = L2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L1_Equals_L2__c</label>
    <type>Checkbox</type>
</CustomField>