force-app/main/default/objects/Case__c/fields/L2__c.field-meta.xml
<CustomField>
    <fullName>L2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>