force-app/main/default/objects/Case__c/fields/L2_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>L2_Approved_Date__c</fullName>
    <label>L2 Approved Date</label>
    <type>Date</type>
</CustomField>