force-app/main/default/objects/Case__c/fields/L2_Equals_L3_c__c.field-meta.xml
<CustomField>
    <fullName>L2_Equals_L3_c__c</fullName>
    <formula>L2__c = L3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L2_Equals_L3__c</label>
    <type>Checkbox</type>
</CustomField>