force-app/main/default/objects/Case__c/fields/L3__c.field-meta.xml
<CustomField>
    <fullName>L3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>