force-app/main/default/objects/Case__c/fields/L3_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>L3_Approved_Date__c</fullName>
    <label>L3 Approved Date</label>
    <type>Date</type>
</CustomField>