force-app/main/default/objects/Case__c/fields/L3_Equals_L4_c__c.field-meta.xml
<CustomField>
    <fullName>L3_Equals_L4_c__c</fullName>
    <formula>L3__c = L4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L3_Equals_L4__c</label>
    <type>Checkbox</type>
</CustomField>