force-app/main/default/objects/Case__c/fields/Marketing_material_Media_Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_material_Media_Sub_type__c</fullName>
    <label>Marketing material Media Sub-type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>