force-app/main/default/objects/Case__c/fields/Marketing_material_Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_material_Media_Type__c</fullName>
    <label>Marketing material Media Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>