force-app/main/default/objects/Case__c/fields/Media_Lines_Summary__c.field-meta.xml
<CustomField>
    <fullName>Media_Lines_Summary__c</fullName>
    <description>Flattened list of the requested media lines, e.g. &quot;Standee - ACP/LE Signage x3; Poster - Wall Wrap x2&quot;. Exists because approval pages cannot display child records, so this is how approvers see what was requested.</description>
    <label>Requested Media</label>
    <length>255</length>
    <type>Text</type>
</CustomField>