force-app/main/default/objects/Case__c/fields/Media_Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Media_Sub_type__c</fullName>
    <label>Media Sub type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>