force-app/main/default/objects/Case__c/fields/Nature_of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Complaint__c</fullName>
    <label>Nature of Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wheel Damage</fullName>
            </value>
            <value>
                <fullName>Half / No Cooling</fullName>
            </value>
            <value>
                <fullName>Fan Motor Issue</fullName>
            </value>
            <value>
                <fullName>Compressor Not Working</fullName>
            </value>
            <value>
                <fullName>Glass Broken /Sliding Issue</fullName>
            </value>
            <value>
                <fullName>Door Damage/Problem</fullName>
            </value>
            <value>
                <fullName>Cord Wire Issue / Burnt</fullName>
            </value>
            <value>
                <fullName>Body Expand /Dent</fullName>
            </value>
            <value>
                <fullName>Auto Cut Off Issue //Thermostart Issue</fullName>
            </value>
            <value>
                <fullName>Ice Formation Issue</fullName>
            </value>
            <value>
                <fullName>Water Leakage Issue</fullName>
            </value>
            <value>
                <fullName>Lock Issue</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Complaint2</fullName>
                <isActive>false</isActive>
                <label>Complaint2</label>
            </value>
            <value>
                <fullName>Field Work</fullName>
                <isActive>false</isActive>
                <label>Field Work</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>