force-app/main/default/objects/Case__c/fields/New_Asset_Code__c.field-meta.xml
<CustomField>
    <fullName>New_Asset_Code__c</fullName>
    <label>New Asset Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>