force-app/main/default/objects/Case__c/fields/OEM_serial_number__c.field-meta.xml
<CustomField>
    <fullName>OEM_serial_number__c</fullName>
    <label>QR Code Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>