force-app/main/default/objects/Case__c/fields/Old_Asset_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Asset_Code__c</fullName>
    <label>Old Asset Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>