force-app/main/default/objects/Case__c/fields/Outlet__c.field-meta.xml
<CustomField>
    <fullName>Outlet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Outlet)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>