force-app/main/default/objects/Case__c/fields/Public_File_Url__c.field-meta.xml
<CustomField>
    <fullName>Public_File_Url__c</fullName>
    <label>Public File Url</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>