force-app/main/default/objects/Case__c/fields/QR_Scan__c.field-meta.xml
<CustomField>
    <fullName>QR_Scan__c</fullName>
    <label>QR Scan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>