force-app/main/default/objects/Case__c/fields/Radio_value__c.field-meta.xml
<CustomField>
    <fullName>Radio_value__c</fullName>
    <label>Radio value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>