force-app/main/default/objects/Case__c/fields/Reason_for_replacement__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_replacement__c</fullName>
    <label>Reason for replacement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>