force-app/main/default/objects/Case__c/fields/Reason_for_transfer__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_transfer__c</fullName>
    <label>Reason for transfer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>