force-app/main/default/objects/Case__c/fields/Request_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_Image_URL__c</fullName>
    <description>Download URL of the photo captured when the case was raised. Rendered by the Request Photo formula field.</description>
    <label>Request Image URL</label>
    <type>Url</type>
</CustomField>