force-app/main/default/objects/Case__c/fields/Request_type__c.field-meta.xml
<CustomField>
    <fullName>Request_type__c</fullName>
    <label>Request type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>