force-app/main/default/objects/Case__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_type_Name__c</field>
            <operation>equals</operation>
            <value>Retailer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Retailer)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>