force-app/main/default/objects/Case__c/fields/Retailer_Forecast_Sales__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Forecast_Sales__c</fullName>
    <label>Retailer Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>