force-app/main/default/objects/Case__c/fields/Retailer_Hub_Match__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Hub_Match__c</fullName>
    <description>Plain text copy of the retailer&apos;s hub, written by the Case Copy Retailer Hub Location flow. Exists solely so the Vendor lookup filter has something it can compare against: a lookup filter cannot use a picklist across objects, nor a formula field.</description>
    <label>Retailer Hub Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>