force-app/main/default/objects/Case__c/fields/Retailer_Hub_Text__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Hub_Text__c</fullName>
    <description>Text form of Retailer Hub. Exists only so the Vendor lookup filter can compare against it - a lookup filter cannot compare two picklist fields across objects.</description>
    <formula>TEXT(Retailer_Hub__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Hub Text</label>
    <type>Text</type>
</CustomField>