force-app/main/default/objects/Case__c/fields/Retailer_Location__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Location__c</fullName>
    <label>Retailer Location</label>
    <type>TextArea</type>
</CustomField>