force-app/main/default/objects/Case__c/fields/Scrap__c.field-meta.xml
<CustomField>
    <fullName>Scrap__c</fullName>
    <label>Scrap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transferred to warehouse</fullName>
            </value>
            <value>
                <fullName>Replacement Given</fullName>
                <isActive>false</isActive>
                <label>Replacement Given</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>